[project]
name = "ai-test-agent"
version = "0.1.0"
description = "AI Network Test Compiler - NL to hping3 script"
requires-python = ">=3.10"
dependencies = [
    "flask>=2.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ai-test-agent = "main:main"
